Removed values from config file

--- a/pyonionscan.cfg
+++ b/pyonionscan.cfg
@@ -1,5 +1,5 @@
 [Paths]
-onionscan_results: /root/pyOnionScan/onionscan_results
+onionscan_results:
 
 [Shodan]
-api_key: W64Cvg2HI9qTg5nOXYdKofZVwCyIA3U6
+api_key:
