--- a/conf/pyonionscan.cfg
+++ b/conf/pyonionscan.cfg
@@ -1,7 +1,7 @@
 [Paths]
-onionscan_results:
+onionscan_results: C:\\Users\\Chad\\Downloads\\onionscan_results
 onionscan_graph:
-onion_master_list:
+onion_master_list: C:\\Users\\Chad\\PycharmProjects\\pyOnionScan
 
 [Shodan]
 api_key:
